- Fixed the wave driver applet to correctly continue after a error or warning.
- Added a macro introspection facility allowing to iterate on all defined macro 
  names.
- Added a new commandline option --macronames/-m to the Wave driver application
  which lists all defined macros and their definitions to an optionally 
  specified file (default is cout).

Boost V1.34.0
- Wave Version 1.2.4
- Added the possibility to explicitly enable/disable the generation of #line 
  directives. Added a corresponding commandline argument to the Wave driver 
  tool (--line/-L) which takes either 0 or 1 as its parameter.
- Added support for #pragma wave option(command: value) directives, which 
  supports the following commands:
   . #pragma wave option(line: [0|1])  
        Enable/disable generation of #line directives
   . #pragma wave option(preserve: [0|1|2])  
        Control whitespace preservation
   . #pragma wave option(output: ["filename" | null | default])
        Redirect output to the given file (or no output, if 'null' is specified,
        or output to the file as given on the command line, if 'default' is 
        specified).
        The filename is resolved relative to the directory of the processed
        file.
  These new #pragma directives are implemented in the Wave driver tool only.
  It is possible to combine several options in one #pragma directive, i.e.
  #pragma wave option(line: 0, preserve: 2).
- Changed the signature of the may_skip_whitespace() preprocessing hook to 
  additionally take the preprocessing context as its first parameter.
- Added the possibility to the Wave tool to disable initial output by 
  specifying a '-' as the output file. This is useful for syntax checks only or
  in conjunction with the #pragma wave option(output: ...) to restrict the
  generated output.
- Improved error reporting in the Wave tool on bad output file stream state.
- Switched to Re2C V0.10.0
- Fixed some of the VC7.1 /W4 warnings.